@@ -32,6 +32,7 @@
 	  incoming connection
 	* added more detailed instrumentation of the disk I/O thread
 
+	* fixed bug in bdecoder when decoding invalid messages
 	* added build warning when building with UNICODE but the standard library
 	  doesn't provide std::wstring
 	* fixed add_node python binding
